# pet-pastebin

./: README.md  alembic.ini  pyproject.toml
api_service/: main.py
api_service/api/v1/: __init__.py  pastebin.py
api_service/core/: __init__.py  config.py  database.py  dev_config.py
api_service/models/: __init__.py  base.py  paste.py
api_service/serializers/: paste_schemas.py
api_service/utils/: enumerations.py
api_service/utils/dependencies/: get_db.py
migrations/: env.py
migrations/versions/: 0f3d8b6666b6_initial_migration.py
