[tool.poetry]
name = "pet-pastebin"
version = "0.1.0"
description = "Pastebin pet-project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.7"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
httpx = "^0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.5.post1"
sqlalchemy-utils = "^0.41.1"
python-multipart = "^0.0.9"
fastapi = {extras = ["all"], version = "^0.110.0"}
apscheduler = "^3.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
